VS Code changes