@@ -114,8 +114,8 @@ public class UI {
 
     private static void printCapturedPieces(List<ChessPiece> captured) {
 
-        List<ChessPiece> white = captured.stream().filter(x -> x.getColor() == Color.WHITE).collect(Collectors.toList());
-        List<ChessPiece> black = captured.stream().filter(x -> x.getColor() == Color.BLACK).collect(Collectors.toList());
+        List<ChessPiece> white = captured.stream().filter(x -> x.getColor() == Color.WHITE).toList();
+        List<ChessPiece> black = captured.stream().filter(x -> x.getColor() == Color.BLACK).toList();
 
         System.out.println("Captured pieces:");
         System.out.print("White: ");
